syntax = "proto3";
package pb;

option go_package = "pb";

message AdminCmdRequest {
    oneof command {
        Info info = 1;
        JoinCluster joinCluster = 2;
    }
}

message Info {
}

message JoinCluster {
}

